<resources>
    <string name="app_name">att_101</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="select_subject">Subjects</string>
    <string name="enter_attendance">Enter Attendance</string>
    <string name="add_new_student">Add New Student</string>
    <string name="view_student_details">View Student details</string>
</resources>
