<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editText3"
        android:hint="@string/enter_email_address"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:inputType=""
        android:autofillHints="" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/signinButton"
        android:layout_marginTop="77dp"
        android:onClick="doOnClick"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>